<resources>
    <string name="app_name">reMed Me!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_splash">splash</string>
    <string name="title_activity_create_reminder">createReminder</string>
    <string name="title_activity_create_user">createUser</string>
    <string name="title_activity_view_reminder">viewReminder</string>
    <string name="create_reminder_logo">The logo for the reminder page</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="view_my_reminders">MANAGE MY REMINDERS</string>
    <string name="create_a_reminder">CREATE A REMINDER</string>
    <string name="profile_picture">profile picture</string>
    <string name="username">Username</string>
    <string name="welcome">| Welcome |</string>
    <string name="password">Please Enter PIN</string>
    <string name="login">Login</string>
    <string name="app_logo">App logo</string>
    <string name="guardian_s_name">Guardian\'s Name</string>
    <string name="my_name">my name</string>
    <string name="emergency_name">Emergency Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="emergency_phone">Emergency Phone</string>
    <string name="my_home_address">My Home Address</string>
    <string name="save">SAVE</string>
    <string name="setDate"><u>Tap to Set Date</u></string>
    <string name="title_activity_main2">Main2Activity</string>


    <!-- Strings related to reminder creation -->
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Medication Name</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">Time to take your medication!</string>
    >>>>>>> a8bf720f09cd927bd829c75edd58cf49ed887621
</resources>
