<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffd78c">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture"
        app:srcCompat="@drawable/edit_user" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userDOB"
        android:layout_alignStart="@+id/userDOB"
        android:layout_below="@+id/login_logo"
        android:layout_gravity="start"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/my_name"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:drawableLeft="@drawable/ic_action_name"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="My Name"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/guardName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userAddress"
        android:layout_alignStart="@+id/userAddress"
        android:layout_below="@+id/userAddress"
        android:contentDescription="@string/guardian_s_name"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:drawableLeft="@drawable/ic_action_guard_name"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/emergency_name"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="start" android:drawableStart="@drawable/ic_action_guard_name" />

    <EditText
        android:id="@+id/userDOB"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_logo"
        android:layout_alignLeft="@+id/userAddress"
        android:layout_alignRight="@+id/login_logo"
        android:layout_alignStart="@+id/userAddress"
        android:layout_below="@+id/userName"
        android:layout_gravity="start"
        android:drawableLeft="@drawable/ic_action_age"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/date_of_birth"
        android:inputType="datetime"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        android:textSize="20sp"
        android:textStyle="bold" android:drawableStart="@drawable/ic_action_age" />

    <EditText
        android:id="@+id/userAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userDOB"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_action_address"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/my_home_address"
        android:inputType="textPostalAddress"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        android:textSize="18sp"
        android:textStyle="bold" android:drawableStart="@drawable/ic_action_address"
        android:gravity="start" />

    <EditText
        android:id="@+id/guardPhone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/guardName"
        android:layout_alignStart="@+id/guardName"
        android:layout_below="@+id/guardName"
        android:drawableLeft="@drawable/ic_action_phone"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/emergency_phone"
        android:inputType="phone"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="start" android:drawableStart="@drawable/ic_action_phone" />

    <Button
        android:id="@+id/save_profile_button"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guardPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="casual"
        android:text="@string/save"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>