<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient">


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:fontFamily="cursive"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:background="#11000000"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="start" android:drawableStart="@drawable/ic_action_user" />

    <EditText
        android:id="@+id/user_pwd"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:numeric="integer|decimal"
        android:password="true"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Widget.EditText"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="start" android:drawableStart="@drawable/ic_action_pass" />

    <Button
        android:id="@+id/login_button"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="casual"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>